--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ regex==2023.8.8
 requests==2.31.0
 scipy==1.11.2
 six==1.16.0
-sklearn==0.0.post9
+# sklearn==0.0.post9
 tenacity==8.2.3
 tiktoken==0.5.1
 tqdm==4.65.0
