use google secrets manager and added function to determine which secrets

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Run Bot",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/src/bot.py",
+            "program": "${workspaceFolder}/src/main.py",
             "console": "integratedTerminal",
             "justMyCode": true,
             "envFile": "${workspaceFolder}/.env"
